refactor: remove lagacy code